<resources>
    <string name="app_name">PfoertnerAdmin</string>
    <string name="scan_qr">Scan QR-Code</string>
    <string name="lets_get_started">Lets get started!</string>
    <string name="please_open_the_tablet_app">Please open the App on the panel</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="create_account">Create Account</string>
    <string name="server_client_id">626288801350-vk790l2a56u0m25p63q36asu4tv7gnsr.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
